testsuite/poke.pkl/adda-diag-1.pk
/* { dg-do compile } */

""[:][:][0] += 0; /* { dg-error "" } */
